# tidal-midi

./: README.md  cabal.project  tidal-midi.cabal
Attic/: VolcaKick.hs
Sound/Tidal/MIDI/: Context.hs  Output.hs  Stream.hs
