name:                tidal-midi
version:             0.10.0
synopsis:            Minimal MIDI support directly from tidal
-- description:
homepage:            http://tidal.lurk.org/
license:             GPL-3
license-file:        LICENSE
author:              Alex McLean
maintainer:          Pascal Gauthier
Stability:           Experimental
Copyright:           (c) Alex McLean and other contributors, 2015
category:            Sound
build-type:          Simple
cabal-version:       >= 1.8
-- Travis CI integration
tested-with:         GHC == 9.4.1

Description: Minimal midi support for tidal.

library
  Exposed-modules: Sound.Tidal.MIDI.Context
                   Sound.Tidal.MIDI.Device
                   Sound.Tidal.MIDI.Stream
                   Sound.Tidal.MIDI.Output

  Build-depends: base < 5
               , tidal >= 1.0 && < 2
               , tidal-core >= 1.0 && < 2
               , tidal-link >= 1.0 && < 2
               , PortMidi >= 0.1.6.0 && < 0.2.0
               , containers

source-repository head
  type:     git
  location: https://github.com/tidalcycles/tidal-midi
